--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
 # To ensure app dependencies are ported from your virtual environment/host machine into your container, run 'pip freeze > requirements.txt' in the terminal to overwrite this file
-django==5.0.1
-gunicorn==21.2.0
+django==4.2.11
+keras
+tensorflow
+noisereduce
+pandas
+librosa
+numpy
+boto3
+difflib
