--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # To ensure app dependencies are ported from your virtual environment/host machine into your container, run 'pip freeze > requirements.txt' in the terminal to overwrite this file
-django==4.2.11
+django==4.1.13
 keras
 tensorflow
 noisereduce
@@ -7,5 +7,6 @@ pandas
 librosa
 numpy
 boto3
-djongo
+djongo==1.3.6
 pytz
+django-storages==1.14.2
